--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <div class="team-parent">
           <div class="team-item">
                 <div class="team-img">
-                    <img src="Images/أحمد_خالد_توفيق.jpg" alt="john"  width="190px" height="190px">
+                    <img src="images/أحمد_خالد_توفيق.jpg" alt="john"  width="190px" height="190px">
                     <div class="team-overlay">
                         <a href="#"><i class="fab fa-facebook-square"></i></a> 
                         <a href="#"><i class="fab fa-twitter-square"></i></a> 
@@ -428,7 +428,7 @@
     
           <div class="team-item tttt">
               <div class="team-img">
-                  <img src="Images/نجيب محفوظ.jpeg" alt="john"  width="190px" height="190px">
+                  <img src="images/نجيب محفوظ.webp" alt="john"  width="190px" height="190px">
                   <div class="team-overlay">
                       <a href="#"><i class="fab fa-facebook-square"></i></a> 
                       <a href="#"><i class="fab fa-twitter-square"></i></a> 
@@ -443,7 +443,7 @@
     
         <div class="team-item">
           <div class="team-img">
-              <img src="Images/طه حسين.webp" alt="john"  width="190px" height="190px">
+              <img src="images/طه حسين.jpg" alt="john"  width="190px" height="190px">
               <div class="team-overlay">
                   <a href="#"><i class="fab fa-facebook-square"></i></a> 
                   <a href="#"><i class="fab fa-twitter-square"></i></a> 
